HDL ANT Deployment Package/retrieveUnpackaged/objects/Order_Choice__c.object
<CustomObject>
    <fields>
        <fullName>Copia_Panel_ID__c</fullName>
        <label>Copia Panel ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Eligible_for_P_H__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this Panel include more than 1 test?</inlineHelpText>
        <label>Eligible for P&amp;H</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Choice</label>
    <nameField>
        <label>Order Choice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>